istio/staging/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.staging.iqbalhakim.ink,argo.staging.iqbalhakim.ink
    tailscale.com/hostname: "iqbalhakim-ingress-staging"
