istio/staging/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.staging.iqbalhakim.ink
        - argo.staging.iqbalhakim.ink
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - grafana.staging.iqbalhakim.ink
        - argo.staging.iqbalhakim.ink
      tls:
        mode: SIMPLE
        credentialName: iqbalhakim-staging-tls
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.staging.iqbalhakim.ink
  gateways:
    - istio-system/staging-istio-ingress-gateway
  http:
    - route:
        - destination:
            host: staging-kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - argo.staging.iqbalhakim.ink
  gateways:
    - istio-system/staging-istio-ingress-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
